--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "uuid": "^9.0.1"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
   }
 }
